# Ebbinghaus

./: CMakeLists.txt  readme.md
dir/aaa/: freezeTable  jobTable  jobTable_info  lookTable
dir/cord/: jobTable_info  lookTable
dir/test/: freezeTable  jobTable  jobTable_info  lookTable
dir/word/: jobTable  jobTable_info
head/: Job.h  Project.h  cmdt.h
include/: IO.h  Job.h  cflag.h  cmake_config.h.in  cmdt.h  symbol.h
project/: bb  config  projects
src/: IO.cpp  Project.cpp  cflag.cpp  cmdt.cpp  main.cpp  symbol.cpp
